[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
name = "diesel_derives"
version = "0.1.0"

[lib]
name = "diesel_derives"
proc-macro = true

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.diesel]
features = ["postgres"]
version = "1.0.0-beta1"
