[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Automatically derive some simple CRUD methods for your Diesel models"
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
name = "diesel_derives_extra"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.1.2"

[lib]
name = "diesel_derives_extra"
proc-macro = true

[dependencies]
quote = "0.3.15"
syn = "0.11.11"
lazy_static = "1.0.0"

[dependencies.clippy]
optional = true
version = "0.0.179"

[dependencies.diesel]
version = "1.0.0"

[dependencies.diesel_derives_traits]
version = "0.1.2"

[dependencies.diesel_logger]
version = "0.1.0"
optional = true

[features]
"default" = ["postgres"]
"postgres" = ["diesel/postgres"]
#"mysql" = ["diesel/mysql"]
#"sqlite" = ["diesel/sqlite"]
"logger" = ["diesel_logger"]
