[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
description = "Automatically derive some simple CRUD methods for your Diesel models"
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
name = "diesel_derives_extra"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.1.2"

[lib]
name = "diesel_derives_extra"
proc-macro = true

[dependencies]
diesel = "1.0.0"
diesel_derives_traits = "0.1.2"
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dependencies.diesel_logger]
version = "0.1.0"
optional = true

[features]
"default" = ["postgres"]
"postgres" = ["diesel/postgres"]
#"mysql" = ["diesel/mysql"]
#"sqlite" = ["diesel/sqlite"]
"logger" = ["diesel_logger"]
