[package]
authors = ["Josh Holmer <jholmer.in@gmail.com>", "Berkus Decker <berkus+cargo@gmail.com"]
description = "Automatically derive some simple CRUD methods for your Diesel models"
exclude = [
    "tests/*",
]
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
name = "diesel_derives_extra"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.2.0"

[lib]
name = "diesel_derives_extra"
proc-macro = true

[dependencies]
diesel = "1.4.6"
diesel_derives_traits = "0.2.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"

[dependencies.diesel_logger]
version = "0.1.1"
optional = true

[features]
"default" = ["postgres"]
"postgres" = ["diesel/postgres"]
#"mysql" = ["diesel/mysql"]
#"sqlite" = ["diesel/sqlite"]
"logger" = ["diesel_logger"]
