[package]
name = "diesel_derives_traits"
description = "Traits for diesel_derives_extra"
homepage = "https://github.com/shssoichiro/diesel-derives-extra"
license = "MIT"
repository = "https://github.com/shssoichiro/diesel-derives-extra"
version = "0.1.2"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]

[dependencies]

[dependencies.clippy]
optional = true
version = "0.0.179"

[dependencies.diesel]
version = "1.0.0"
